--- a/src/budget.component/budget.component.html
+++ b/src/budget.component/budget.component.html
@@ -71,7 +71,7 @@
 
       <div class="column right">
         <!-- résumé + liste + graphique -->
-        <div id="pdf-content">
+        <div id="budget-content">
 
           <div class="kpi-row">
             <div class="kpi-card">
