--- a/src/components/input-budget/income.component/income.component.html
+++ b/src/components/input-budget/income.component/income.component.html
@@ -1,7 +1,7 @@
 <div class="section-card">
     <h3>Revenus</h3>
     <div class="input-group">
-        <input type="number" [(ngModel)]="income" (ngModelChange)="afterIncomeAddEmit()" />
+        <input type="number" [(ngModel)]="income" />
         <label>Revenu mensuel (€)</label>
     </div>
 </div>
